--- a/InAndOut/Views/Shared/_Layout.cshtml
+++ b/InAndOut/Views/Shared/_Layout.cshtml
@@ -30,6 +30,10 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Expense" asp-action="Index">My Expenses</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="ExpenseType" asp-action="Index">My Expenses Type</a>
+                        </li>
+                        
                     </ul>
                 </div>
             </div>
